--- a/cv.htm
+++ b/cv.htm
@@ -19,7 +19,7 @@
 <table cellpadding="0" cellspacing="0" width="750" class="Middle">
 	<tr>
 		<td><img src="images/ButtonRowLeftSpacer4.jpg" width="324" height="27" alt=""></td>
-		<td><a href="index.htm"><img src="images/Top_Home_black.jpg" border="0" width="56" height="27" alt="Button link to home page"></a></td>
+		<td><a href="index.html"><img src="images/Top_Home_black.jpg" border="0" width="56" height="27" alt="Button link to home page"></a></td>
 		<td><a href="research.htm"><img src="images/Top_Research_black.jpg" border="0" width="79" height="27" alt="Button link to research page"></a></td>
 		<td><a href="funding.htm"><img src="images/Top_Funding_black.jpg" border="0" width="70" height="27" alt="Button link to funding page"></a></td>
 		<td><a href="publications.htm"><img src="images/Top_Publications_black.jpg" border="0" width="102" height="27" alt="Button link publications page"></a></td>
@@ -101,7 +101,7 @@
 <table cellpadding="0" cellspacing="0" width="750" class="Bottom">
 	<tr>
 		<td><img src="images/BottomRowSpacerLeft.jpg" width="20" height="25" alt=""></td>
-		<td><a href="index.htm"><img src="images/Bottom_Home_black.jpg" width="60" height="25" border="0" alt="Button link to home page"></a></td>
+		<td><a href="index.html"><img src="images/Bottom_Home_black.jpg" width="60" height="25" border="0" alt="Button link to home page"></a></td>
 		<td><a href="research.htm"><img src="images/Bottom_Research_black.jpg" width="87" height="25" border="0" alt="Button link to research page"></a></td>
 		<td><a href="funding.htm"><img src="images/Bottom_Funding_black.jpg" width="81" height="25" border="0" alt="Button link to funding page"></a></td>				
 		<td><a href="publications.htm"><img src="images/Bottom_Publications_black.jpg" width="103" height="25" border="0" alt="Button link to publications page"></a></td>
