--- a/publications.htm
+++ b/publications.htm
@@ -20,7 +20,7 @@
 <table cellpadding="0" cellspacing="0" width="750" class="Middle">
 	<tr>
 		<td><img src="images/ButtonRowLeftSpacer5.jpg" width="324" height="27" alt=""></td>
-		<td><a href="index.htm"><img src="images/Top_Home_black.jpg" border="0" width="56" height="27" alt="Button link to homepage"></a></td>
+		<td><a href="index.html"><img src="images/Top_Home_black.jpg" border="0" width="56" height="27" alt="Button link to homepage"></a></td>
 		<td><a href="research.htm"><img src="images/Top_Research_black.jpg" border="0" width="79" height="27" alt="Button link to research"></a></td>
 		<td><a href="funding.htm"><img src="images/Top_Funding_black.jpg" border="0" width="70" height="27" alt="Button link to funding"></a></td>
 		<td><a href="publications.htm"><img src="images/Top_Publications_white.jpg" border="0" width="102" height="27" alt="Button link to publications"></a></td>
@@ -326,7 +326,7 @@
 <table cellpadding="0" cellspacing="0" width="750" class="Bottom">
 	<tr>
 		<td><img src="images/BottomRowSpacerLeft.jpg" width="20" height="25" alt=""></td>
-		<td><a href="index.htm"><img src="images/Bottom_Home_black.jpg" width="60" height="25" border="0" alt="Button link to home page"></a></td>
+		<td><a href="index.html"><img src="images/Bottom_Home_black.jpg" width="60" height="25" border="0" alt="Button link to home page"></a></td>
 		<td><a href="research.htm"><img src="images/Bottom_Research_black.jpg" width="87" height="25" border="0" alt="Button link to research"></a></td>
 		<td><a href="funding.htm"><img src="images/Bottom_Funding_black.jpg" width="81" height="25" border="0" alt="Button link to funding"></a></td>				
 		<td><a href="publications.htm"><img src="images/Bottom_Publications_white.jpg" width="103" height="25" border="0" alt="Button link to publications"></a></td>
