remove spurious references to alexa

--- a/cv.htm
+++ b/cv.htm
@@ -3,7 +3,7 @@
 <head>
 	<title>CV for Malachi Griffith</title>
 	<meta name="description" content="Curriculum Vitae (CV - Resume) for Malachi Griffith, BSc, PhD">
-	<meta name="keywords" content="Malachi Griffith, Genome Sciences Center, BC Cancer Agency, Contact Details, ALEXA-Seq, ALEXA-WTSS, WTSS, RNA-Seq, Illumina sequencing, Genomics, Bioinformatics, Cancer Research, CV, Resume">
+	<meta name="keywords" content="Malachi Griffith, Contact Details, RNA-Seq, Genomics, Bioinformatics, Cancer Research, CV, Resume">
 	<link rel="stylesheet" type="text/css" href="MalachiGriffith.css">
 </head>
 
@@ -11,7 +11,7 @@
 <!-- Top bar image table -->
 <table cellpadding="0" cellspacing="0" width="750" class="Top">
 	<tr>
-		<td><img src="images/TopRow4.jpg" width="750" height="108" alt="ALEXA logo and images of BC Cancer Agency"></td>
+		<td><img src="images/TopRow4.jpg" width="750" height="108" alt="logo and images of BC Cancer Agency"></td>
 	</tr>
 </table>
 
