--- a/research.htm
+++ b/research.htm
@@ -3,7 +3,7 @@
 <head>
 	<title>Research information</title>
 	<meta name="description" content="Research interests of Malachi Griffith, BSc, PhD">
-	<meta name="keywords" content="Malachi Griffith, Genome Sciences Center, BC Cancer Agency, Contact Details, ALEXA-Seq, ALEXA-WTSS, WTSS, RNA-Seq, Illumina sequencing, Genomics, Bioinformatics, Cancer Research, CV, Resume">
+	<meta name="keywords" content="Malachi Griffith, Contact Details, RNA-Seq, Genomics, Bioinformatics, Cancer Research, CV, Resume">
 	<link rel="stylesheet" type="text/css" href="MalachiGriffith.css">
 </head>
 
@@ -11,7 +11,7 @@
 <!-- Top bar image table -->
 <table cellpadding="0" cellspacing="0" width="750" class="Top">
 	<tr>
-		<td><img src="images/TopRow2.jpg" width="750" height="108" alt="ALEXA logo and images of BC Cancer Agency"></td>
+		<td><img src="images/TopRow2.jpg" width="750" height="108" alt="logo and images of BC Cancer Agency"></td>
 	</tr>
 </table>
 
@@ -19,12 +19,12 @@
 <table cellpadding="0" cellspacing="0" width="750" class="Middle">
 	<tr>
 		<td><img src="images/ButtonRowLeftSpacer2.jpg" width="324" height="27" alt=""></td>
-		<td><a href="index.html"><img src="images/Top_Home_black.jpg" border="0" width="56" height="27" alt="Button link to homepage of the ALEXA-Seq website"></a></td>
-		<td><a href="research.htm"><img src="images/Top_Research_white.jpg" border="0" width="79" height="27" alt="Button link to an introduction to the ALEXA-Seq website"></a></td>
-		<td><a href="funding.htm"><img src="images/Top_Funding_black.jpg" border="0" width="70" height="27" alt="Button link to detailed methods for how ALEXA-Seq is used to study alternative transcript expression"></a></td>
-		<td><a href="publications.htm"><img src="images/Top_Publications_black.jpg" border="0" width="102" height="27" alt="Button link to results for a validation experiment using the ALEXA-Seq approach"></a></td>
-		<td><a href="cv.htm"><img src="images/Top_CV_black.jpg" border="0" width="32" height="27" alt="Button link to the download area for supplementary data and source code"></a></td>
-		<td><a href="contact.htm"><img src="images/Top_Contact_black.jpg" border="0" width="71" height="27" alt="Button link to the download area for supplementary data and source code"></a></td>
+		<td><a href="index.html"><img src="images/Top_Home_black.jpg" border="0" width="56" height="27" alt="Button link to homepage"></a></td>
+		<td><a href="research.htm"><img src="images/Top_Research_white.jpg" border="0" width="79" height="27" alt="Button link to research"></a></td>
+		<td><a href="funding.htm"><img src="images/Top_Funding_black.jpg" border="0" width="70" height="27" alt="Button link to funding"></a></td>
+		<td><a href="publications.htm"><img src="images/Top_Publications_black.jpg" border="0" width="102" height="27" alt="Button link to publications"></a></td>
+		<td><a href="cv.htm"><img src="images/Top_CV_black.jpg" border="0" width="32" height="27" alt="Button link to cv"></a></td>
+		<td><a href="contact.htm"><img src="images/Top_Contact_black.jpg" border="0" width="71" height="27" alt="Button link to contact"></a></td>
 		<td><img src="images/ButtonRowSpacerRight.jpg" width="16" height="27" alt=""></td>
 	</tr>
 </table>
@@ -151,12 +151,12 @@
 <table cellpadding="0" cellspacing="0" width="750" class="Bottom">
 	<tr>
 		<td><img src="images/BottomRowSpacerLeft.jpg" width="20" height="25" alt=""></td>
-		<td><a href="index.html"><img src="images/Bottom_Home_black.jpg" width="60" height="25" border="0" alt="Button link to main ALEXA home page"></a></td>
-		<td><a href="research.htm"><img src="images/Bottom_Research_white.jpg" width="87" height="25" border="0" alt="Button link to ALEXA-Arrays home page"></a></td>
-		<td><a href="funding.htm"><img src="images/Bottom_Funding_black.jpg" width="81" height="25" border="0" alt="Button link to ALEXA-Seq home page"></a></td>				
-		<td><a href="publications.htm"><img src="images/Bottom_Publications_black.jpg" width="103" height="25" border="0" alt="Button link to acknowledgements of funding and other support for Malachi Griffith and Marco Marra"></a></td>
-		<td><a href="cv.htm"><img src="images/Bottom_CV_black.jpg" width="33" height="25" border="0" alt="Button link to contact information for Malachi Griffith and Marco Marra"></a></td>
-		<td><a href="contact.htm"><img src="images/Bottom_Contact_black.jpg" width="105" height="25" border="0" alt="Button link to contact information for Malachi Griffith and Marco Marra"></a></td>
+		<td><a href="index.html"><img src="images/Bottom_Home_black.jpg" width="60" height="25" border="0" alt="Button link to home page"></a></td>
+		<td><a href="research.htm"><img src="images/Bottom_Research_white.jpg" width="87" height="25" border="0" alt="Button link to research"></a></td>
+		<td><a href="funding.htm"><img src="images/Bottom_Funding_black.jpg" width="81" height="25" border="0" alt="Button link to funding"></a></td>				
+		<td><a href="publications.htm"><img src="images/Bottom_Publications_black.jpg" width="103" height="25" border="0" alt="Button link to publications for Malachi Griffith and Marco Marra"></a></td>
+		<td><a href="cv.htm"><img src="images/Bottom_CV_black.jpg" width="33" height="25" border="0" alt="Button link to CV"></a></td>
+		<td><a href="contact.htm"><img src="images/Bottom_Contact_black.jpg" width="105" height="25" border="0" alt="Button link to contact for Malachi Griffith"></a></td>
 		<td><img src="images/BottomRowSpacerRight.jpg" width="261" height="25" alt=""></td>
 	</tr>
 </table>
