--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>malachigriffith.org</title>
 	<meta name="description" content="Academic, professional and personal website of Malachi Griffith, BSc, PhD">
-	<meta name="keywords" content="Malachi Griffith, Genome Sciences Center, BC Cancer Agency, Washington University School of Medicine, WashU, The Genome Insitute, Marco Marra, Elaine Mardis, Contact Details, ALEXA-Seq, ALEXA-WTSS, WTSS, RNA-Seq, Illumina sequencing, Genomics, Bioinformatics, Cancer Research, CV, Resume">
+	<meta name="keywords" content="Malachi Griffith, Genome Sciences Center, BC Cancer Agency, Washington University School of Medicine, WashU, The Genome Insitute, Marco Marra, Elaine Mardis, Contact Details, RNA-Seq, Illumina sequencing, Genomics, Bioinformatics, Cancer Research, CV, Resume">
 	<link rel="stylesheet" type="text/css" href="MalachiGriffith.css">
 
 </head>
