--- a/publications.htm
+++ b/publications.htm
@@ -3,7 +3,7 @@
 <head>
 	<title>Publications and academic activities</title>
 	<meta name="description" content="Publication list for Malachi Griffith, BSc, Phd">
-	<meta name="keywords" content="Malachi Griffith, Genome Sciences Center, BC Cancer Agency, Contact Details, ALEXA-Seq, ALEXA-WTSS, WTSS, RNA-Seq, Illumina sequencing, Genomics, Bioinformatics, Cancer Research, CV, Resume">
+	<meta name="keywords" content="Malachi Griffith, Contact Details, RNA-Seq, Genomics, Bioinformatics, Cancer Research, CV, Resume">
 	<link rel="stylesheet" type="text/css" href="MalachiGriffith.css">
 </head>
 
@@ -12,7 +12,7 @@
 <!-- Top bar image table -->
 <table cellpadding="0" cellspacing="0" width="750" class="Top">
 	<tr>
-		<td><img src="images/TopRow5.jpg" width="750" height="108" alt="ALEXA logo and images of BC Cancer Agency"></td>
+		<td><img src="images/TopRow5.jpg" width="750" height="108" alt="logo and images of BC Cancer Agency"></td>
 	</tr>
 </table>
 
