trying to fix background color on homepage

--- a/index.html
+++ b/index.html
@@ -96,20 +96,17 @@
 		<td><img src="images/TextAreaSpacerRight.jpg" width="12" height="423" alt=""></td>
 		
 		<!-- Embedded table for right hand textbox -->
-		<td class="Color2" valign="top">
+		<td class="Color2" valign="top" style="background-color:#ffcc00;">
 			<table cellpadding="0" cellspacing="0" class="Center" >
 				<tr>
 					<img src="images/TextArea2TopSpacer.jpg" width="396" height="18" alt="">
 				</tr>
 				<tr>
 					<p class="Indented12LR_s16_Bold">Welcome to malachigriffith.org</p><br>
-					<!--  <p class="Indented12LR"><img src="images/MG07.jpg" width="325" height="284"></p> -->
-					<!-- <p class="Indented12LR"><img src="images/MG09.jpg" width="250" height="241"></p> -->
-                    <p class="Indented12LR"><img src="images/MG14.jpg" width="250"></p>
-					<!-- <p class="Indented12LR"><img src="images/MG10.jpg" width="325" height="245"></p> -->			
+                    			<p class="Indented12LR"><img src="images/MG14.jpg" width="250"></p>
 					<p class="Indented12LR_spaced">This website contains a <a href="cv.htm">CV</a> and academic information for Dr. Malachi Griffith. You can find information about my 
-												   <a href="research.htm">research</a>, <a href="funding.htm">funding</a>, <a href="publications.htm">publications</a>, and professional activities 
-												   here. If you want to get in touch, please visit my <a href="contact.htm">contact</a> page.</p>
+				        <a href="research.htm">research</a>, <a href="funding.htm">funding</a>, <a href="publications.htm">publications</a>, and professional activities 
+					here. If you want to get in touch, please visit my <a href="contact.htm">contact</a> page.</p>
 												   
 				
 
