trying to fix background color on homepage

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 		<td><img src="images/TextAreaSpacerRight.jpg" width="12" height="423" alt=""></td>
 		
 		<!-- Embedded table for right hand textbox -->
-		<td class="Color2" valign="top" style="background-color:#ffcc00;">
+		<td class="Color2" valign="top" style="background-color:#D6ECF9;">
 			<table cellpadding="0" cellspacing="0" class="Center" >
 				<tr>
 					<img src="images/TextArea2TopSpacer.jpg" width="396" height="18" alt="">
