--- a/funding.htm
+++ b/funding.htm
@@ -51,16 +51,6 @@
 	</tr>
 </table>
 
-<!--- table of logos for current support -->
-<table cellpadding="0" cellspacing="0" width="752" class="Content">
-	<tr align="center">
-		<td><a href="http://www.nih.gov/"><img src="images/200px-NIH_logo.svg.png" width="200" height="200" hspace="0" alt="NIH logo" class="Pic_unbordered" style="background-color:white;"></a></td>
-		<td><a href="https://www.genome.gov/"><img src="images/200px-US-NIH-NHGRI-Logo.svg.png" width="200" height="67" hspace="0" align="absmiddle" alt="NHGRI logo" class="Pic_unbordered" style="background-color:white;"></a></td>
-	</tr>
-	<tr><td></td><td><br><br></td></tr>
-</table>
-
-
 <!--- expandable content section for past support -->
 <table cellpadding="0" cellspacing="0" width="752" class="Content">
 	<tr>
@@ -84,22 +74,30 @@
 	</tr>
 </table>
 
+<!--- table of logos for current support -->
+<table cellpadding="0" cellspacing="0" width="752" class="Content">
+	<tr align="center">
+	</tr>
+	<tr><td></td><td><br><br></td></tr>
+</table>
+
+
 <!--- table of logos for past support -->
 <table cellpadding="0" cellspacing="0" width="752" class="Content">
 	<tr align="center">
-		<td><a href="http://www.nserc-crsng.gc.ca"><img src="images/nserc.gif" width="130" height="63" hspace="0" alt="NSERC logo" class="Pic_unbordered"></a></td>
-		<td><a href="http://www.msfhr.org/"><img src="images/msfhr-logo.gif" width="155" height="86" hspace="0"  align="absmiddle" alt="MSFHR logo" class="Pic_unbordered"></a></td>
-		<td><a href="http://www.genomebc.ca/"><img src="images/GenomeBC.jpg" width="161" height="72" hspace="0" alt="Genome British Columbia logo" class="Pic_unbordered"></a></td>
+		<td><a href="http://www.nserc-crsng.gc.ca"><img src="images/nserc.gif" width="130" hspace="0" alt="NSERC logo" class="Pic_unbordered"></a></td> <!-- NSERC -->
+		<td><a href="https://www.genome.gov/"><img src="images/200px-US-NIH-NHGRI-Logo.svg.png" width="200" height="67" hspace="0" align="absmiddle" alt="NHGRI logo" class="Pic_unbordered" style="background-color:white;"></a></td> <!-- NHGRI -->
+		<td><a href="http://www.ncic.cancer.ca/"><img src="images/NCIC_small.jpg" width="250" hspace="0" alt="NCIC logo" class="Pic_unbordered"></a></td> <!-- NCIC -->
 	</tr>
 	<tr align="center">
-		<td><a href="http://www.ubc.ca/"><img src="images/ul_bg.jpg" width="100" height="136" hspace="0" alt="University of British Columbia logo" class="Pic_unbordered"></a></td>
-		<td><a href="http://www.ncic.cancer.ca/"><img src="images/NCIC_small.jpg" width="250" height="47" hspace="0" alt="NCIC logo" class="Pic_unbordered"></a></td>
-		<td><a href="http://www.bccancerfoundation.com/"><img src="images/BCCF_small.jpg" width="250" height="50" hspace="0" alt="British Columbia Cancer Agency logo" class="Pic_unbordered"></a></td>
+		<td><a href="http://www.msfhr.org/"><img src="images/msfhr-logo.gif" width="130" hspace="0"  align="absmiddle" alt="MSFHR logo" class="Pic_unbordered"></a></td> <!-- MSFHR -->
+		<td><a href="http://www.genomebc.ca/"><img src="images/GenomeBC.jpg" width="200" hspace="0" alt="Genome British Columbia logo" class="Pic_unbordered"></a></td> <!-- Genome BC -->
+		<td><a href="http://www.bccancerfoundation.com/"><img src="images/BCCF_small.jpg" width="250" hspace="0" alt="British Columbia Cancer Agency logo" class="Pic_unbordered"></a></td> <!-- BCCA -->
 	</tr>
 	<tr align="center">
-		<td></td>
-		<td><a href="http://www.terryfoxrun.org/"><img src="images/TFF_small.jpg" width="250" height="151" hspace="0" alt="Terry Fox Foundation logo" class="Pic_unbordered"></a></td>
-		<td></td>
+		<td><a href="http://www.ubc.ca/"><img src="images/ul_bg.jpg" width="130" hspace="0" alt="University of British Columbia logo" class="Pic_unbordered"></a></td> <!-- UBC -->
+		<td><a href="http://www.terryfoxrun.org/"><img src="images/TFF_small.jpg" width="200" hspace="0" alt="Terry Fox Foundation logo" class="Pic_unbordered"></a></td> <!-- TFF -->
+		<td><a href="http://www.nih.gov/"><img src="images/200px-NIH_logo.svg.png" width="190" hspace="0" alt="NIH logo" class="Pic_unbordered" style="background-color:white;"></a></td> <! -- NIH -->
 	</tr>
 	<tr><td></td><td><br><br></td></tr>
 </table>
