add label to picture and update publications

--- a/contact.htm
+++ b/contact.htm
@@ -43,7 +43,9 @@
 		<br>
 		<p class="Indented12LR_s16_Bold">Contact Info</p>
 		<p class="Indented12LR">Please feel free to contact me regarding research or other inquiries using the information below:</p><br>
-		<p class="Indented12LR"><img src="images/MG15.jpg" width="500"></p><br>
+    <p class="Indented12LR"><img src="images/MG15.jpg" width="500"></p>
+    <p class="Indented12LR">Malachi Griffith (left) and Obi Griffith (right)</p><br>
+
 		<p class="Indented12LR_bold">Malachi Griffith, PhD</p>
 		<p class="Indented12LR">
         			Assistant Professor, Department of Genetics, Washington University School of Medicine<br>
