--- a/publications.htm
+++ b/publications.htm
@@ -67,12 +67,30 @@
 
 <!--
 
-
+  
 
 -->
 
+
+
     <table class="Pubs"><td>
-		<p class="Indented12LR">Cabanski CR, Magrini V, Griffith M, Griffith OL, McGrath S, Zhang J, Walker J, Ly A, Demeter R, Fulton RS, Pong WW, Gutmann DH, Govindan R, Mardis ER, Maher CA. <em class="TitleHighlight">cDNA hybrid capture improves transcriptome analysis on low-input and archived samples</em>. <strong><a href="http://jmd.amjpathol.org/">J Mol Diagn</a></strong>. 2014 Jul;16(4):440-51.
+		<p class="Indented12LR">Alder O, Cullum R, Lee S, Kan AC, Wei W, Yi Y, Garside VC, Bilenky M, Griffith M, Morrissy AS, Robertson GA, Thiessen N, Zhao Y, Chen Q, Pan D, Jones SJ, Marra MA, Hoodless PA. <em class="TitleHighlight">Hippo Signaling Influences HNF4A and FOXA2 Enhancer Switching during Hepatocyte Differentiation</em>. <strong><a href="http://www.cell.com/cell-reports/home">Cell Reports. </a></strong>2014 Oct 9;9(1):261-71.
+		<br><a href="http://www.ncbi.nlm.nih.gov/pubmed/25263553">abstract</a> | <a href="http://www.cell.com/cell-reports/fulltext/S2211-1247(14)00722-0">full text</a> | <a href="http://www.cell.com/cell-reports/pdf/S2211-1247(14)00722-0.pdf">pdf</a> | <a href="http://www.altmetric.com/details.php?doi=10.1016/j.celrep.2014.08.046&src=bookmarklet">altmetric stats</a> | <a href="https://scholar.google.com/scholar?cites=3459577045743404771">google scholar citations (5)</a>
+		</td><td>
+    <div class='altmetric-embed' data-badge-type='donut' data-badge-popover='right' data-doi="10.1016/j.celrep.2014.08.046" align="center"></div>
+    </p><br>
+    </td></table>
+
+    <table class="Pubs"><td>
+		<p class="Indented12LR">Miller CA, White BS, Dees ND, Griffith M, Griffith OL, Welch JS, Vij R, Tomasson MH, Graubert TA, Walter MJ, Ellis MJ, Schierding W, DiPersio JF, Ley TJ, Mardis ER, Wilson RK, and Ding L. <em class="TitleHighlight">SciClone: Inferring clonal architecture and tracking the spatial and temporal patterns of tumor evolution.</em>. <strong><a href="http://journals.plos.org/ploscompbiol/">PLoS Computational Biology</a></strong>. 2014 Aug 7;10(8):e1003665.
+		<br><a href="http://www.ncbi.nlm.nih.gov/pubmed/25102416">abstract</a> | <a href="http://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1003665">full text</a> | <a href="http://www.ploscompbiol.org/article/fetchObject.action?uri=info:doi/10.1371/journal.pcbi.1003665&representation=PDF">pdf</a> | <a href="http://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1003665#s5">supplementary materials</a> | <a href="http://www.altmetric.com/details.php?doi=10.1371/journal.pcbi.1003665&src=bookmarklet">altmetric stats</a> | <a href="https://scholar.google.com/scholar?cites=16214998867826590383">google scholar citations (26)</a>
+		</td><td>
+    <div class='altmetric-embed' data-badge-type='donut' data-badge-popover='right' data-doi="10.1371/journal.pcbi.1003665" align="center"></div>
+    </p><br>
+    </td></table>
+
+    <table class="Pubs"><td>
+		<p class="Indented12LR">Cabanski CR, Magrini V, Griffith M, Griffith OL, McGrath S, Zhang J, Walker J, Ly A, Demeter R, Fulton RS, Pong WW, Gutmann DH, Govindan R, Mardis ER, Maher CA. <em class="TitleHighlight">cDNA hybrid capture improves transcriptome analysis on low-input and archived samples</em>. <strong><a href="http://jmd.amjpathol.org/">Journal of Molecular Diagnostics</a></strong>. 2014 Jul;16(4):440-51.
     <br><a href="http://www.ncbi.nlm.nih.gov/pubmed/24814956">abstract</a> | <a href="http://jmd.amjpathol.org/article/S1525-1578(14)00072-5/fulltext">full text</a> | <a href="http://jmd.amjpathol.org/article/S1525-1578(14)00072-5/pdf">pdf</a> | <a href="http://jmd.amjpathol.org/article/S1525-1578(14)00072-5/addons">supplementary materials</a> | <a href="http://www.altmetric.com/details.php?doi=10.1016/j.jmoldx.2014.03.004&src=bookmarklet">altmetric stats</a> | <a href="https://scholar.google.com/scholar?cites=4909493740220517595">google scholar citations (4)</a>
 		</td><td>
     <div class='altmetric-embed' data-badge-type='donut' data-badge-popover='right' data-doi="10.1016/j.jmoldx.2014.03.004" align="center"></div>
@@ -88,7 +106,7 @@
     </td></table>
 
 		<table class="Pubs"><td>
-		<p class="Indented12LR">Tucker T, Zahir FR, <strong class="NameHighlight">Griffith M</strong>, Delaney A, Chai D, Tsang E, Lemyre E, Dobrzeniecka S, Marra M, Eydoux P, Langlois S, Hamdan FF, Michaud JL, Friedman JM. <em class="TitleHighlight">Single exon-resolution targeted chromosomal microarray analysis of known and candidate intellectual disability genes</em>. <strong><a href="http://www.nature.com/ejhg/index.html">Eur J Hum Genet</a></strong>. 2014 Jun;22(6):792-800.
+		<p class="Indented12LR">Tucker T, Zahir FR, <strong class="NameHighlight">Griffith M</strong>, Delaney A, Chai D, Tsang E, Lemyre E, Dobrzeniecka S, Marra M, Eydoux P, Langlois S, Hamdan FF, Michaud JL, Friedman JM. <em class="TitleHighlight">Single exon-resolution targeted chromosomal microarray analysis of known and candidate intellectual disability genes</em>. <strong><a href="http://www.nature.com/ejhg/index.html">European Journal of Human Genetics</a></strong>. 2014 Jun;22(6):792-800.
     <br><a href="http://www.ncbi.nlm.nih.gov/pubmed/24253858">abstract</a> | <a href="http://www.nature.com/ejhg/journal/v22/n6/full/ejhg2013248a.html">full text</a> | <a href="http://www.nature.com/ejhg/journal/v22/n6/pdf/ejhg2013248a.pdf">pdf</a> | <a href="http://www.nature.com/ejhg/journal/v22/n6/suppinfo/ejhg2013248s1.html?url=/ejhg/journal/v22/n6/full/ejhg2013248a.html">supplementary materials</a> | <a href="http://www.altmetric.com/details.php?doi=10.1038/ejhg.2013.248&src=bookmarklet">altmetric stats</a> | <a href="https://scholar.google.com/scholar?cites=13947171264901538092">google scholar citations (9)</a>
 		</td><td>
     <div class='altmetric-embed' data-badge-type='donut' data-badge-popover='right' data-doi="10.1038/ejhg.2013.248" align="center"></div>
@@ -250,8 +268,10 @@
     <table class="Pubs"><td>
     <p class="Indented12LR"><strong class="NameHighlight">Griffith M</strong> and Marra MA. <em class="TitleHighlight">Alternative expression analysis: experimental and bioinformatic approaches for the analysis of transcript diversity</em>.  2007.  Chapter 12.  <strong>Genes Genomes and Genomics</strong>, Volume 2.  p201-242.  Regency Publications.  New Delhi.
 		<br><a href="files/GGG_Chapter12_GriffithAndMarra_2007.pdf">pdf</a> | <a href="http://scholar.google.com/scholar?cites=7842647532198602991">google scholar citations (4)</a>
+		</td><td>
+		<div class='altmetric-embed' data-badge-type='donut' data-badge-popover='right' data-pmid="10.1101/gr.4871006" align="center"></div>
 		</p><br>
-    </td></table>
+		</td></table>
 
     <table class="Pubs"><td>
 		<p class="Indented12LR">Bainbridge MN, Warren RL, Hirst M, Romanuik T, Zeng T, Go A, Delany A, <strong class="NameHighlight">Griffith M</strong>, Hickenbotham M, Magrini V, Mardis ER, Sadar MD, Siddiqui AS, Marra MA, and Jones SJM.  <em class="TitleHighlight">Analysis of the prostate cancer cell line LNCaP transcriptome using a sequencing-by-synthesis approach</em>.  <strong><a href="http://www.biomedcentral.com/bmcgenomics/">BMC Genomics</a></strong>. 2006 Sep 29;7(1):246.
@@ -296,8 +316,10 @@
     <table class="Pubs"><td>		
     <p class="Indented12LR"><strong class="NameHighlight">Griffith M</strong> and Gietz RD.  <em class="TitleHighlight">Escherichia coli endA deletion strain for use in two-hybrid shuttle vector selection</em>. <strong><a href="http://www.biotechniques.com/">Biotechniques</a></strong>.  2003 Aug;35(2):272-4, 276, 278.
 		<br><a href="http://www.ncbi.nlm.nih.gov/pubmed/12951767">abstract</a> | <a href="http://www.biotechniques.com/multimedia/archive/00011/03352bm05_11636a.pdf">pdf</a> | <a href="http://www.altmetric.com/details.php?pmid=12951767&src=bookmarklet">altmetric stats</a> | <a href="http://scholar.google.com/scholar?cites=1079096075097583146">google scholar citations (7)</a>
+		</td><td>
+		<div class='altmetric-embed' data-badge-type='donut' data-badge-popover='right' data-pmid="10.1101/gr.4871006" align="center"></div>
 		</p><br>
-    </td></table>
+		</td></table>
 
 		<br>
 		</td>
