--- a/publications.htm
+++ b/publications.htm
@@ -67,14 +67,29 @@
 
 <!--
 
-  
+. . 
+PMID: 25409150
 
 -->
 
-
+    <table class="Pubs"><td>
+		<p class="Indented12LR">Juric D, Castel P, Griffith M, Griffith OL, Won HH, Ellis H, Ebbesen SH, Ainscough BJ, Ramu A, Iyer G, Shah RH, Huynh T, Mino-Kenudson M, Sgroi D, Isakoff S, Thabet A, Elamine L, Solit DB, Lowe SW, Quadt C, Peters M, Derti A, Schegel R, Huang A, Mardis ER, Berger MF, Baselga J, Scaltriti M. <em class="TitleHighlight">Convergent loss of PTEN leads to clinical resistance to a PI(3)K¿ inhibitor</em>. <strong><a href="http://www.nature.com/nature/index.html">Nature</a></strong>. 2015 Feb 12;518(7538):240-4.
+		<br><a href="http://www.ncbi.nlm.nih.gov/pubmed/25409150">abstract</a> | <a href="http://www.nature.com/nature/journal/v518/n7538/full/nature13948.html">full text</a> | <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/PMC4326538/pdf/nihms634111.pdf">pdf</a> | <a href="http://www.altmetric.com/details.php?doi=10.1038/nature13948&src=bookmarklet">altmetric stats</a> | <a href="https://scholar.google.com/scholar?cites=1622915749458411527">google scholar citations (20)</a>
+		</td><td>
+    <div class='altmetric-embed' data-badge-type='donut' data-badge-popover='right' data-doi="10.1038/nature13948" align="center"></div>
+    </p><br>
+    </td></table>
 
     <table class="Pubs"><td>
-		<p class="Indented12LR">Alder O, Cullum R, Lee S, Kan AC, Wei W, Yi Y, Garside VC, Bilenky M, Griffith M, Morrissy AS, Robertson GA, Thiessen N, Zhao Y, Chen Q, Pan D, Jones SJ, Marra MA, Hoodless PA. <em class="TitleHighlight">Hippo Signaling Influences HNF4A and FOXA2 Enhancer Switching during Hepatocyte Differentiation</em>. <strong><a href="http://www.cell.com/cell-reports/home">Cell Reports. </a></strong>2014 Oct 9;9(1):261-71.
+		<p class="Indented12LR">Ding L, Kim M, Kanchi KL, Dees ND, Lu C, Griffith M, Fenstermacher D, Sung H, Miller CA, Goetz B, Wendl MC, Griffith O, Cornelius LA, Linette GP, McMichael JF, Sondak VK, Fields RC, Ley TJ, Mulé JJ, Wilson RK, Weber JS. <em class="TitleHighlight">Clonal architectures and driver mutations in metastatic melanomas</em>. <strong><a href="http://www.plosone.org/">PLoS One</a></strong>. 2014 Nov 13;9(11):e111153.
+		<br><a href="http://www.ncbi.nlm.nih.gov/pubmed/25393105">abstract</a> | <a href="http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0111153">full text</a> | <a href="http://www.plosone.org/article/fetchObject.action?uri=info:doi/10.1371/journal.pone.0111153&representation=PDF">pdf</a> | <a href="http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0111153#s5">supplementary materials</a> | <a href="http://www.altmetric.com/details.php?doi=10.1371/journal.pone.0111153&src=bookmarklet">altmetric stats</a> | <a href="https://scholar.google.com/scholar?cites=16335883864391111927">google scholar citations (7)</a>
+		</td><td>
+    <div class='altmetric-embed' data-badge-type='donut' data-badge-popover='right' data-doi="10.1371/journal.pone.0111153" align="center"></div>
+    </p><br>
+    </td></table>
+
+    <table class="Pubs"><td>
+		<p class="Indented12LR">Alder O, Cullum R, Lee S, Kan AC, Wei W, Yi Y, Garside VC, Bilenky M, Griffith M, Morrissy AS, Robertson GA, Thiessen N, Zhao Y, Chen Q, Pan D, Jones SJ, Marra MA, Hoodless PA. <em class="TitleHighlight">Hippo Signaling Influences HNF4A and FOXA2 Enhancer Switching during Hepatocyte Differentiation</em>. <strong><a href="http://www.cell.com/cell-reports/home">Cell Reports</a></strong>. 2014 Oct 9;9(1):261-71.
 		<br><a href="http://www.ncbi.nlm.nih.gov/pubmed/25263553">abstract</a> | <a href="http://www.cell.com/cell-reports/fulltext/S2211-1247(14)00722-0">full text</a> | <a href="http://www.cell.com/cell-reports/pdf/S2211-1247(14)00722-0.pdf">pdf</a> | <a href="http://www.altmetric.com/details.php?doi=10.1016/j.celrep.2014.08.046&src=bookmarklet">altmetric stats</a> | <a href="https://scholar.google.com/scholar?cites=3459577045743404771">google scholar citations (5)</a>
 		</td><td>
     <div class='altmetric-embed' data-badge-type='donut' data-badge-popover='right' data-doi="10.1016/j.celrep.2014.08.046" align="center"></div>
