--- a/publications.htm
+++ b/publications.htm
@@ -67,10 +67,26 @@
 
 <!--
 
-. . 
-PMID: 25409150
+
 
 -->
+
+
+    <table class="Pubs"><td>
+		<p class="Indented12LR">Solga AC, Pong WW, Walker J, Wylie T, Magrini V, Apicelli AJ, Griffith M, Griffith OL, Kohsaka S, Wu GF, Brody DL, Mardis ER, Gutmann DH. <em class="TitleHighlight">RNA-sequencing reveals oligodendrocyte and neuronal transcripts in microglia relevant to central nervous system disease</em>. <strong><a href="http://onlinelibrary.wiley.com/journal/10.1002/(ISSN)1098-1136">Glia</a></strong>. 2015 Apr;63(4):531-48.
+		<br><a href="http://www.ncbi.nlm.nih.gov/pubmed/25258010">abstract</a> | <a href="http://onlinelibrary.wiley.com/doi/10.1002/glia.22754/full">full text</a> | <a href="http://onlinelibrary.wiley.com/doi/10.1002/glia.22754/epdf">pdf</a> | <a href="http://onlinelibrary.wiley.com/doi/10.1002/glia.22754/suppinfo">supplementary materials</a> | <a href="http://www.altmetric.com/details.php?doi=10.1002/glia.22754&src=bookmarklet">altmetric stats</a> | <a href="https://scholar.google.com/scholar?cites=110508707788488076">google scholar citations (0)</a>
+		</td><td>
+    <div class='altmetric-embed' data-badge-type='donut' data-badge-popover='right' data-doi="10.1002/glia.22754" align="center"></div>
+    </p><br>
+    </td></table>
+
+    <table class="Pubs"><td>
+		<p class="Indented12LR">Gascard P, Bilenky M, Sigaroudinia M, Zhao J, Li L, Carles A, Delaney A, Tam A, Kamoh B, Cho S, Griffith M, Chu A, Robertson G, Cheung D, Li I, Heravi-Moussavi A, Moksa M, Mingay M, Hussainkhel A, Davis B, Nagarajan RP, Hong C, Echipare L, O'Geen H, Hangauer MJ, Cheng JB, Neel D, Hu D, McManus MT, Moore R, Mungall A, Ma Y, Plettner P, Ziv E, Wang T, Farnham PJ, Jones SJ, Marra MA, Tlsty TD, Costello JF, Hirst M. <em class="TitleHighlight">Epigenetic and transcriptional determinants of the human breast</em>. <strong><a href="http://www.nature.com/ncomms/index.html">Nature Communications</a></strong>. 2015 Feb 18;6:6351.
+		<br><a href="http://www.ncbi.nlm.nih.gov/pubmed/25690954">abstract</a> | <a href="http://www.nature.com/ncomms/2015/150218/ncomms7351/full/ncomms7351.html">full text</a> | <a href="http://www.nature.com/ncomms/2015/150218/ncomms7351/pdf/ncomms7351.pdf">pdf</a> | <a href="http://www.nature.com/ncomms/2015/150218/ncomms7351/full/ncomms7351.html#supplementary-information">supplementary materials</a> | <a href="http://www.altmetric.com/details.php?doi=10.1038/ncomms7351&src=bookmarklet">altmetric stats</a> | <a href="https://scholar.google.com/scholar?cites=17895164637830141633">google scholar citations (1)</a>
+		</td><td>
+    <div class='altmetric-embed' data-badge-type='donut' data-badge-popover='right' data-doi="10.1038/ncomms7351" align="center"></div>
+    </p><br>
+    </td></table>
 
     <table class="Pubs"><td>
 		<p class="Indented12LR">Juric D, Castel P, Griffith M, Griffith OL, Won HH, Ellis H, Ebbesen SH, Ainscough BJ, Ramu A, Iyer G, Shah RH, Huynh T, Mino-Kenudson M, Sgroi D, Isakoff S, Thabet A, Elamine L, Solit DB, Lowe SW, Quadt C, Peters M, Derti A, Schegel R, Huang A, Mardis ER, Berger MF, Baselga J, Scaltriti M. <em class="TitleHighlight">Convergent loss of PTEN leads to clinical resistance to a PI(3)K¿ inhibitor</em>. <strong><a href="http://www.nature.com/nature/index.html">Nature</a></strong>. 2015 Feb 12;518(7538):240-4.
