--- a/publications.htm
+++ b/publications.htm
@@ -68,9 +68,16 @@
 <!--
 
 
-
 -->
 
+
+    <table class="Pubs"><td>
+		<p class="Indented12LR">Okeyo-Owuor T, White BS, Chatrikhi R, Mohan DR, Kim S, Griffith M, Ding L, Ketkar-Kulkarni S, Hundal J, Laird KM, Kielkopf CL, Ley TJ, Walter MJ, Graubert TA. <em class="TitleHighlight">U2AF1 mutations alter sequence specificity of pre-mRNA binding and splicing</em>. <strong><a href="http://www.nature.com/leu/index.html">Leukemia</a></strong>. 2015 Apr;29(4):909-17.
+		<br><a href="http://www.ncbi.nlm.nih.gov/pubmed/25311244">abstract</a> | <a href="http://www.nature.com/leu/journal/v29/n4/full/leu2014303a.html">full text</a> | <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/PMC4391984/pdf/nihms-634118.pdf">pdf</a> | <a href="http://www.altmetric.com/details.php?doi=10.1038/leu.2014.303&src=bookmarklet">altmetric stats</a> | <a href="https://scholar.google.com/scholar?cites=16587657136875929296">google scholar citations (2)</a>
+		</td><td>
+    <div class='altmetric-embed' data-badge-type='donut' data-badge-popover='right' data-doi="10.1038/leu.2014.303" align="center"></div>
+    </p><br>
+    </td></table>
 
     <table class="Pubs"><td>
 		<p class="Indented12LR">Solga AC, Pong WW, Walker J, Wylie T, Magrini V, Apicelli AJ, Griffith M, Griffith OL, Kohsaka S, Wu GF, Brody DL, Mardis ER, Gutmann DH. <em class="TitleHighlight">RNA-sequencing reveals oligodendrocyte and neuronal transcripts in microglia relevant to central nervous system disease</em>. <strong><a href="http://onlinelibrary.wiley.com/journal/10.1002/(ISSN)1098-1136">Glia</a></strong>. 2015 Apr;63(4):531-48.
