--- a/publications.htm
+++ b/publications.htm
@@ -67,9 +67,18 @@
 
 <!--
 
+  
+PMID: 25965570
 
 -->
 
+    <table class="Pubs"><td>
+		<p class="Indented12LR">Shirai CL, Ley JN, White BS, Kim S, Tibbitts J, Shao J, Ndonwi M, Wadugu B, Duncavage EJ, Okeyo-Owuor T, Liu T, Griffith M, McGrath S, Magrini V, Fulton RS, Fronick C, O'Laughlin M, Graubert TA, Walter MJ<em class="TitleHighlight">Mutant U2AF1 Expression Alters Hematopoiesis and Pre-mRNA Splicing In Vivo</em>. <strong><a href="http://www.cell.com/cancer-cell/home">Cancer Cell</a></strong>. 2015 May 11;27(5):631-43.
+		<br><a href="http://www.ncbi.nlm.nih.gov/pubmed/25965570">abstract</a> | <a href="http://www.cell.com/cancer-cell/abstract/S1535-6108(15)00141-5">full text</a> | <a href="http://www.cell.com/cancer-cell/abstract/S1535-6108(15)00141-5">pdf</a> | <a href="http://www.cell.com/cancer-cell/abstract/S1535-6108(15)00141-5">supplementary materials</a> | <a href="http://www.altmetric.com/details.php?doi=10.1016/j.ccell.2015.04.008&src=bookmarklet">altmetric stats</a> | <a href="https://scholar.google.com/scholar?cites=8634660708723705836">google scholar citations (5)</a>
+		</td><td>
+    <div class='altmetric-embed' data-badge-type='donut' data-badge-popover='right' data-doi="10.1016/j.ccell.2015.04.008" align="center"></div>
+    </p><br>
+    </td></table>
 
     <table class="Pubs"><td>
 		<p class="Indented12LR">Okeyo-Owuor T, White BS, Chatrikhi R, Mohan DR, Kim S, Griffith M, Ding L, Ketkar-Kulkarni S, Hundal J, Laird KM, Kielkopf CL, Ley TJ, Walter MJ, Graubert TA. <em class="TitleHighlight">U2AF1 mutations alter sequence specificity of pre-mRNA binding and splicing</em>. <strong><a href="http://www.nature.com/leu/index.html">Leukemia</a></strong>. 2015 Apr;29(4):909-17.
