--- a/publications.htm
+++ b/publications.htm
@@ -68,9 +68,18 @@
 <!--
 
   
-PMID: 25965570
+PMID: 26158448; PMCID: PMC4497734.
 
 -->
+
+
+    <table class="Pubs"><td>
+		<p class="Indented12LR">Griffith M*, Griffith OL*, Smith SM*, Ramu A, Callaway MB, Brummett AM, Kiwala MJ, Coffman AC, Regier AA, Oberkfell BJ, Sanderson GE, Mooney TP, Nutter NG, Belter EA, Du F, Long RL, Abbott TE, Ferguson IT, Morton DL, Burnett MM, Weible JV, Peck JB, Dukes A, McMichael JF, Lolofie JT, Derickson BR, Hundal J, Skidmore ZL, Ainscough BJ, Dees ND, Schierding WS, Kandoth C, Kim KH, Lu C, Harris CC, Maher N, Maher CA, Magrini VJ, Abbott BS, Chen K, Clark E, Das I, Fan X, Hawkins AE, Hepler TG, Wylie TN, Leonard SM, Schroeder WE, Shi X, Carmichael LK, Weil MR, Wohlstadter RW, Stiehr G, McLellan MD, Pohl CS, Miller CA, Koboldt DC, Walker JR, Eldred JM, Larson DE, Dooling DJ, Ding L, Mardis ER, Wilson RK. <em class="TitleHighlight">Genome Modeling System: A Knowledge Management Platform for Genomics</em>. <strong><a href="http://journals.plos.org/ploscompbiol/">PLoS Computational Biology</a></strong>. 2015 Jul 9;11(7):e1004274.
+		<br><a href="http://www.ncbi.nlm.nih.gov/pubmed/26158448">abstract</a> | <a href="http://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1004274">full text</a> | <a href="http://www.ploscompbiol.org/article/fetchObject.action?uri=info:doi/10.1371/journal.pcbi.1004274&representation=PDF">pdf</a> | <a href="http://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1004274#sec013">supplementary materials</a> | <a href="http://www.altmetric.com/details.php?doi=10.1371/journal.pcbi.1004274&src=bookmarklet">altmetric stats</a> | <a href="https://scholar.google.com/scholar?cites=11301329700728166527">google scholar citations (1)</a>
+		</td><td>
+    <div class='altmetric-embed' data-badge-type='donut' data-badge-popover='right' data-doi="10.1371/journal.pcbi.1004274" align="center"></div>
+    </p><br>
+    </td></table>
 
     <table class="Pubs"><td>
 		<p class="Indented12LR">Shirai CL, Ley JN, White BS, Kim S, Tibbitts J, Shao J, Ndonwi M, Wadugu B, Duncavage EJ, Okeyo-Owuor T, Liu T, Griffith M, McGrath S, Magrini V, Fulton RS, Fronick C, O'Laughlin M, Graubert TA, Walter MJ<em class="TitleHighlight">Mutant U2AF1 Expression Alters Hematopoiesis and Pre-mRNA Splicing In Vivo</em>. <strong><a href="http://www.cell.com/cancer-cell/home">Cancer Cell</a></strong>. 2015 May 11;27(5):631-43.
