--- a/publications.htm
+++ b/publications.htm
@@ -68,10 +68,25 @@
 <!--
 
   
-PMID: 26158448; PMCID: PMC4497734.
 
 -->
 
+
+    <table class="Pubs"><td>
+		<p class="Indented12LR">Klco JM, Miller CA, Griffith M, Petti A, Spencer DH, Ketkar-Kulkarni S, Wartman LD, Christopher M, Lamprecht TL, Helton NM, Duncavage EJ, Payton JE, Baty J, Heath SE, Griffith OL, Shen D, Hundal J, Chang GS, Fulton R, O'Laughlin M, Fronick C, Magrini V, Demeter RT, Larson DE, Kulkarni S, Ozenberger BA, Welch JS, Walter MJ, Graubert TA, Westervelt P, Radich JP, Link DC, Mardis ER, DiPersio JF, Wilson RK, Ley TJ. <em class="TitleHighlight">Association Between Mutation Clearance After Induction Therapy and Outcomes in Acute Myeloid Leukemia</em>. <strong><a href="http://jama.jamanetwork.com/journal.aspx">JAMA. Journal of the American Medical Association</a></strong>. 2015 Aug 25;314(8):811-22.
+		<br><a href="http://www.ncbi.nlm.nih.gov/pubmed/26305651">abstract</a> | <a href="http://jama.jamanetwork.com/article.aspx?articleid=2429715">full text</a> | <a href="http://jama.jamanetwork.com/article.aspx?articleid=2429715">pdf</a> | <a href="http://jama.jamanetwork.com/article.aspx?articleid=2429715#tab12">supplementary materials</a> | <a href="http://www.altmetric.com/details.php?doi=10.1001/jama.2015.9643&src=bookmarklet">altmetric stats</a> | <a href="https://scholar.google.com/scholar?cites=3218462263257554361">google scholar citations (1)</a>
+		</td><td>
+    <div class='altmetric-embed' data-badge-type='donut' data-badge-popover='right' data-doi="10.1001/jama.2015.9643" align="center"></div>
+    </p><br>
+    </td></table>
+
+    <table class="Pubs"><td>
+		<p class="Indented12LR">Griffith M, Walker JR, Spies NC, Ainscough BJ, Griffith OL. <em class="TitleHighlight">Informatics for RNA Sequencing: A Web Resource for Analysis on the Cloud</em>. <strong><a href="http://journals.plos.org/ploscompbiol/">PLoS Computational Biology</a></strong>. 2015 Aug 6;11(8):e1004393.
+		<br><a href="http://www.ncbi.nlm.nih.gov/pubmed/26248053">abstract</a> | <a href="http://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1004393">full text</a> | <a href="http://www.ploscompbiol.org/article/fetchObject.action?uri=info:doi/10.1371/journal.pcbi.1004393&representation=PDF">pdf</a> | <a href="http://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1004393#sec009">supplementary materials</a> | <a href="http://www.altmetric.com/details.php?doi=10.1371/journal.pcbi.1004393&src=bookmarklet">altmetric stats</a>
+		</td><td>
+    <div class='altmetric-embed' data-badge-type='donut' data-badge-popover='right' data-doi="10.1371/journal.pcbi.1004393" align="center"></div>
+    </p><br>
+    </td></table>
 
     <table class="Pubs"><td>
 		<p class="Indented12LR">Griffith M*, Griffith OL*, Smith SM*, Ramu A, Callaway MB, Brummett AM, Kiwala MJ, Coffman AC, Regier AA, Oberkfell BJ, Sanderson GE, Mooney TP, Nutter NG, Belter EA, Du F, Long RL, Abbott TE, Ferguson IT, Morton DL, Burnett MM, Weible JV, Peck JB, Dukes A, McMichael JF, Lolofie JT, Derickson BR, Hundal J, Skidmore ZL, Ainscough BJ, Dees ND, Schierding WS, Kandoth C, Kim KH, Lu C, Harris CC, Maher N, Maher CA, Magrini VJ, Abbott BS, Chen K, Clark E, Das I, Fan X, Hawkins AE, Hepler TG, Wylie TN, Leonard SM, Schroeder WE, Shi X, Carmichael LK, Weil MR, Wohlstadter RW, Stiehr G, McLellan MD, Pohl CS, Miller CA, Koboldt DC, Walker JR, Eldred JM, Larson DE, Dooling DJ, Ding L, Mardis ER, Wilson RK. <em class="TitleHighlight">Genome Modeling System: A Knowledge Management Platform for Genomics</em>. <strong><a href="http://journals.plos.org/ploscompbiol/">PLoS Computational Biology</a></strong>. 2015 Jul 9;11(7):e1004274.
