add links to project websites and code repos

--- a/cv.htm
+++ b/cv.htm
@@ -58,36 +58,36 @@
         
 		<p class="Indented12LR_bold">Online profiles</p>        
 		<p class="Indented12LR">
-            WashU MGI Faculty page: <a href="http://genome.wustl.edu/people/griffith_malachi">Profile</a><br>
+      WashU MGI Faculty page: <a href="http://genome.wustl.edu/people/griffith_malachi">Profile</a><br>
 			Linked In: <a href="http://www.linkedin.com/in/malachigriffith">Profile</a><br>
-            Twitter: <a href="http://www.twitter.com/malachigriffith">Feed</a><br>
+      Twitter: <a href="http://www.twitter.com/malachigriffith">Feed</a><br>
 			Google Scholar: <a href="http://scholar.google.com/citations?user=fcIQQ3oAAAAJ&hl=en">Profile</a><br>
 			Research Gate: <a href="http://www.researchgate.net/profile/Malachi_Griffith/">Profile</a><br>
 			Scopus: <a href="http://www.scopus.com/authid/detail.url?authorId=7102075315">Profile</a><br>
-            Researcher ID: <a href="http://www.researcherid.com/rid/P-1285-2014">Profile</a><br>
+      Researcher ID: <a href="http://www.researcherid.com/rid/P-1285-2014">Profile</a><br>
 			Open Research ID: <a href="http://orcid.org/0000-0002-6388-446X">Profile</a><br>
 			Github: <a href="https://github.com/malachig">Profile</a><br>
 			BioStar: <a href="http://www.biostars.org/user/profile/3034/">Profile</a><br>
 			SeqAnswers: <a href="http://seqanswers.com/forums/search.php?searchid=1795608">Profile</a><br>
 			Code Academy: <a href="http://www.codecademy.com/malachig">Profile</a><br>
 			Iterative Genomics Consulting: <a href="http://www.itgenomics.com/">Company website</a><br>
-            Flickr: <a href="http://www.flickr.com/photos/d4rkst4r7/">Photostream</a><br>
-        </p><br>
+      Flickr: <a href="http://www.flickr.com/photos/d4rkst4r7/">Photostream</a><br>
+     </p><br>
         
 		<p class="Indented12LR_bold">Bioinformatics tools/software projects</p>        
 		<p class="Indented12LR">
-        <a href="http://www.alexaplatform.org/index.htm">ALEXA</a><br>
-		<a href="http://www.alexaplatform.org/alexa_seq/">ALEXA-seq</a><br>
-		<a href="http://www.oreganno.org/oregano/">ORegAnno</a><br>
-		<a href="http://dgidb.genome.wustl.edu/">DGIdb</a><br>
-		<a href="https://github.com/genome/gms">GMS</a><br>
-		<a href="https://github.com/griffithlab/rnaseq_tutorial/wiki">RNA-seq.wiki</a><br>
-		<a href="http://docm.genome.wustl.edu/">DOCM</a><br>
-		<a href="https://civic.genome.wustl.edu/#/home">CIVIC</a><br>
-		<a href="https://github.com/genome/sciclone">SciClone</a><br>
-		<a href="https://github.com/griffithlab/GenVisR">GenVisR</a><br>
-		<a href="https://github.com/griffithlab/regtools">RegTools</a><br>
-		<a href="https://github.com/griffithlab/pVAC-Seq">pVAC-seq</a><br>
+    <a href="http://www.alexaplatform.org/alexa_arrays/index.htm">ALEXA</a> - a microarray design and analysis platform for alternative expression analysis. Retired.<br>
+		<a href="http://www.alexaplatform.org/alexa_seq/">ALEXA-seq</a> - a method for alternative expression analysis of RNA-seq data. Retired.<br>
+		<a href="http://www.oreganno.org/oregano/">ORegAnno</a> - an open database for the curation of known regulatory elements from scientific literature. Active.<br>
+    <a href="http://dgidb.genome.wustl.edu/">DGIdb</a> (<a href="https://github.com/genome/dgi-db">git repo</a>) - the gene drug interaction database. Active.<br>
+    <a href="https://github.com/genome/gms">GMS</a> (<a href="https://github.com/genome/gms">core git repo</a>) (<a href="https://github.com/genome/genome">installer git repo</a>) - Genome Modeling System: A Knowledge Management Platform for Genomics. Active.<br>
+    <a href="https://github.com/griffithlab/rnaseq_tutorial/wiki">RNA-seq.wiki</a> (<a href="https://github.com/griffithlab/rnaseq_tutorial">git repo</a>) - Informatics for RNA-seq: A web resource for analysis on the cloud. Active.<br>
+    <a href="http://docm.genome.wustl.edu/">DOCM</a> (<a href="https://github.com/genome/docm">git repo</a>) - the Database of Curated Mutations. Active.<br>
+    <a href="https://civic.genome.wustl.edu/#/home">CIVIC</a> (<a href="https://github.com/genome/civic-server">civic-server git repo</a>) (<a href="https://github.com/genome/civic-client">civic-client git repo</a>) - Clinical Interpretation of Variants in Cancer. Active.<br>
+    <a href="https://github.com/genome/sciclone">SciClone</a> (<a href="https://github.com/genome/sciclone">git repo</a>) - An package for inferring the subclonal architecture of tumors. Active.<br>
+    <a href="https://github.com/griffithlab/GenVisR">GenVisR</a> (<a href="https://github.com/griffithlab/GenVisR">git repo</a>) - A package for highly customizable publication-quality visualization of genomics data. Active.<br>
+    <a href="https://github.com/griffithlab/regtools">RegTools</a> (<a href="https://github.com/griffithlab/regtools">git repo</a>) - Tools that integrate DNA-seq and RNA-seq data to help interpret mutations in a regulatory and splicing context. Active.<br>
+    <a href="https://github.com/griffithlab/pVAC-Seq">pVAC-seq</a> (<a href="https://github.com/griffithlab/pVAC-Seq">git repo</a>) - A cancer immunotherapy pipeline. Active.<br>
 
 
 		</p>
